# datafusion_nats

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  clippy.toml
examples/: main.rs  simple_query.rs
src/: batch_buffer.rs  batch_buffer_test.rs  data_schema.rs  data_source.rs  error.rs  executor.rs  lib.rs  main.rs  nats_connection.rs  raw_filter.rs
src/codec/: csv.rs  csv_test.rs
src/reader/: batch_handler.rs  config.rs  consumer_execution.rs  execution.rs  mod.rs  table.rs  table_properties.rs  table_provider.rs  trace_message.rs
src/reader/format/: csv.rs  json.rs  mod.rs
src/writer/: mod.rs  producer.rs  table_sink.rs
src/writer/format/: csv.rs  json.rs  mod.rs
tests/: integration_test.rs
