[package]
name = "datafusion_nats"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion = "48.0.1"
async-nats = "0.42.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typed-builder = "0.18.0"
url = "2.5.0"
once_cell = "1.19.0"
derivative = "2.2.0"
log = "0.4.21"
maplit = "1.0.2"
futures-util = "0.3.31"

[dev-dependencies]
datafusion_nats = { path = "." }

[[example]]
name = "simple_query"
path = "examples/simple_query.rs"